navbar updated with logo. Need to fix the issue of invisible hamburger

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body,html {
   background-color: #e9e9e9;
 }
 
+.logo_img{
+  width: 100%;
+  height:100%;
+}
+
 .landing-words {
   text-shadow: 2px 2px 20px #a8a8a8;
 }
@@ -31,7 +36,7 @@ hr {
 
 .navbar.navbar-expand-lg.navbar-dark.fixed-top.scrolled {
   background-color: #fff !important;
-  transition: background-color 100ms linear;
+  transition: background-color linear;
   box-shadow: 0px 2px 20px #dadada;
 }
 
@@ -41,6 +46,10 @@ hr {
 
 .navbar.navbar-expand-lg.navbar-dark.fixed-top.scrolled .navbar-brand{
   color: #000;
+}
+
+.navbar-dark .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;..");
 }
 
 .btn-primary, .btn-primary:active{
